tests/ui/consts/match_ice.stderr
error: to use a constant of type `S` in a pattern, `S` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/match_ice.rs:11:9
   |
LL |         C => {}
   |         ^
   |
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralEq.html for details

error[E0004]: non-exhaustive patterns: `&_` not covered
  --> $DIR/match_ice.rs:10:11
   |
LL |     match C {
   |           ^ pattern `&_` not covered
   |
note: `S` defined here
  --> $DIR/match_ice.rs:3:8
   |
LL | struct S;
   |        ^
   = note: the matched value is of type `&S`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         C => {},
LL +         &_ => todo!()
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
